--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Spencer Newcomb
-subtitle: Data enjoyer with a strong background in statistical science
+subtitle: Husband, father, and data enjoyer.
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
@@ -72,11 +72,11 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: xplor4r
-github_username:  sujaykundu777
-instagram_username: xplor4r
+# twitter_username: 
+github_username:  snukem
+# instagram_username: 
 # facebook_username: johndoe
-# linkedin_username: johndoe
+linkedin_username: snewcomb95
 # behance_username: johndoe
 # medium_username: johndoe
 # telegram_username: johndoe
@@ -89,14 +89,14 @@ instagram_username: xplor4r
 # hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+wakatime_username: snukem
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+mailchimp_form_url: 
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-formspree_email: johndoe@gmail.com
+formspree_email: 
 
 # releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
