--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Add Authors here
-Spencer:
+snewcomb:
    name: Spencer Newcomb
    username: snewcomb
    site: https://spencernewcomb.com
    avatar: snewcomb.png
-   bio: "Hi I'm Spencer, a data enjoyer with a strong background in statistical science."
+   bio: "Husband, father, and data enjoyer."
    email: spencenewcomb08@gmail.com
    social:
       - title: "github"
