--- a/_data/galleries/mountains.yml
+++ b/_data/galleries/mountains.yml
@@ -1,3 +1,4 @@
+# This will be for "Projects" tab; not sure how to make it for more than just pictures
 picture_path: mountains
 preview:
   filename: 1
