--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: The Rabbit Hole
 author: Spencer Newcomb
 url: https://spencernewcomb.com # root address of the site
 description: > # description of the site (multiple lines allowed)
-  Hi I'm Spencer! "The Rabbit Hole" is an online repository for both my blog and portfolio of projects related to data science. Most of the blog posts will be related to what I'm learning at that moment in time, and my projects will be self-contained approaches to particular problems.
+  "The Rabbit Hole" is an online repository for both my blog and portfolio of projects related to statistics and data science. Most of the blog posts will be related to what I'm learning at that moment in time, and my projects will be self-contained approaches to particular problems. My mind may wander on sidequests at times, but for the most part this website will be focused on data-related topics.
 
 permalink: /:slug
 
@@ -18,7 +18,7 @@ remote_theme: abhinavs/moonwalk
 theme_config:
   appearance: "dark" # can be "light", "dark" or "auto"
   appearance_toggle: true # if appearance can be switched by user
-  back_home_text: "home.." # customize text for homepage link in post layout
+  back_home_text: "home" # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: true # show blog description
   show_navbar: true # show horizontal navbar
@@ -28,7 +28,7 @@ theme_config:
   show_projects: true # show projects as cards, add in _data/home.yml
   show_blog: true # show blog posts added in _posts
   show_old_projects: false # show old projects as cards, add in _data/home.yml
-  show_misc_list: true # show generic vertical list for misc details, add _data/home.yml
+  show_misc_list: false # show generic vertical list for misc details, add _data/home.yml
   show_reading_time: true # show number of words and reading time in the blog posts
   show_tags: true # show tags in a blog posts
   # options for "home" page
@@ -39,7 +39,7 @@ theme_config:
     title_old_projects: Old Projects
 
 soopr:
-  publish_token: "" # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
+  publish_token: "pt_9eb46945a727c55251878761ec00b060" # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
 
 highlighter: rouge
 
