--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ theme_config:
     title_old_projects: Old Projects
 
 soopr:
-  publish_token:  # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
+  publish_token: ${{ secrets.SCOOPR_PUBLISH_TOKEN }} # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
 
 highlighter: rouge
 
