--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,6 +8,9 @@ navbar_entries:
   - title: linkedin
     url: https://www.linkedin.com/in/snewcomb95/
 
+  - title: github
+    url: https://github.com/snukem
+    
 project_entries:
   - title: Sequentially Allocated Merge-Split Samplers
     url: # the name of the post .md 
@@ -20,11 +23,11 @@ old_project_entries:
   #   highlight: NEW
 
 footer_entries:
-  - title: linkedin
-    url: https://www.linkedin.com/in/snewcomb95/
+  # - title: linkedin
+  #   url: https://www.linkedin.com/in/snewcomb95/
 
-  - title: github
-    url: https://github.com/snukem
+  # - title: github
+  #   url: https://github.com/snukem
 
   - title: feed
     url: feed.xml
