--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,11 +6,11 @@ navbar_entries:
     url: blog
 
   - title: linkedin
-    url: https://www.linkedin.com/in/snewcomb95/
+    url: https://www.linkedin.com/in/snewcomb95
 
   - title: github
     url: https://github.com/snukem
-    
+
 project_entries:
   - title: Sequentially Allocated Merge-Split Samplers
     url: # the name of the post .md 
