fixing publish token

--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ theme_config:
     title_old_projects: Old Projects
 
 soopr:
-  publish_token: ${{ secrets.SCOOPR_PUBLISH_TOKEN }} # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
-
+  publish_token: ${{ vars.SOOPR_PUBLISH_TOKEN }} # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
+  
 highlighter: rouge
 
 sass:
