--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ theme_config:
     title_old_projects: Old Projects
 
 soopr:
-  publish_token: ${{ vars.SOOPR_PUBLISH_TOKEN }} # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
+  publish_token: SOOPER_PUBLISH_TOKEN_PLACEHOLDER # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
   
 highlighter: rouge
 
