--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -40,14 +40,19 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
       # sets the publish token for soopr integration from actions env vars
       - name: Add SOOPR Token
         run: |
           # sets 
           sed -i 's|SOOPER_PUBLISH_TOKEN_PLACEHOLDER|${{ vars.SOOPER_PUBLISH_TOKEN}}|g' _config.yml
+      - name: DEBUG sed command
+        run: |
+          add-apt-repository ppa:rmescandon/yq
+          apt install yq -y
+          yq '.soopr.publish_token' _config.yaml
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
