--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,7 +47,7 @@ jobs:
           sed -i 's|SOOPER_PUBLISH_TOKEN_PLACEHOLDER|${{ vars.SOOPER_PUBLISH_TOKEN}}|g' _config.yml
       - name: DEBUG sed command
         run: |
-          sed -n '40,43p' _config.yaml
+          sed -n '40,43p' _config.yml
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
