--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Add SOOPR Token
         run: |
           # sets 
-          sed -i 's|SOOPER_PUBLISH_TOKEN_PLACEHOLDER|${{ vars.SOOPER_PUBLISH_TOKEN }}|g' _config.yml
+          sed -i 's|SOOPR_PUBLISH_TOKEN_PLACEHOLDER|${{ vars.SOOPR_PUBLISH_TOKEN }}|g' _config.yml
       - name: DEBUG sed command
         run: |
           sed -n '40,43p' _config.yml
