--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,7 +44,9 @@ jobs:
       - name: Add SOOPR Token
         run: |
           # sets 
-          sed -i 's|SOOPR_PUBLISH_TOKEN_PLACEHOLDER|${{ vars.SOOPR_PUBLISH_TOKEN }}|g' _config.yml
+          sed -i 's|SOOPR_PUBLISH_TOKEN_PLACEHOLDER|${SOOPR_TOKEN_ENV_VAR}|g' _config.yml
+        env:
+          SOOPR_TOKEN_ENV_VAR: ${{ vars.SOOPR_PUBLISH_TOKEN }}
       - name: DEBUG sed command
         run: |
           sed -n '40,43p' _config.yml
